--- a/top.html
+++ b/top.html
@@ -20,11 +20,9 @@
 
 <form action="login.php" method="post">
 	ID
-	<input type="text" name="ID" required>
-	</input><br>
+	<input type="text" name="ID" required><br>
 	Password
-	<input type="password" name="password" required>
-	</input><br>
+	<input type="password" name="password" required><br>
 	<input type="submit" value="ログイン">
 </form>
 <!-- SCRIPTS -->
