--- a/top.html
+++ b/top.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="ress.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="top.css">
 <!--[if lt IE 9]>
 <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -29,17 +30,15 @@
 		</div>
 		<div class="contents">
 			<div class="center">
-				<div class="item_center">
-					<i class="far fa-user-circle icon"></i><input type="text" name="ID" placeholder="ID" required autocomplete="off"><br>
-				</div>
+					<i class="far fa-user-circle icon"></i>
+					<input type="text" name="ID" placeholder="ID" required autocomplete="off"><br>
 			</div>
 			<div style="height: 20px">
 				<!-- スペーサー -->
 			</div>
 			<div class="center">
-				<div class="item_center">
-					<i class="fas fa-key icon"></i><input type="password" name="password" placeholder="Password" required autocomplete="off"><br>
-				</div>
+					<i class="fas fa-key icon"></i>
+					<input type="password" name="password" placeholder="Password" required autocomplete="off"><br>
 			</div>
 			<div style="height: 50px">
 				<!-- スペーサー -->
