--- a/login_top.html
+++ b/login_top.html
@@ -24,10 +24,10 @@
 </nav>
 <div class="sidebar">
   <div class="menu button">
-    <a href="">トップページ</a>
+    <a href="infomation.html" target="contents">トップページ</a>
   </div>
   <div class="menu button">
-    <a href="">勤怠管理</a>
+    <a href="kintai.html" target="contents">勤怠管理</a>
   </div>
 	<div class="menu button">
     <a href="">有給申請</a>
@@ -36,7 +36,7 @@
     <a href="">スケジュール</a>
   </div>
 </div>
-<iframe class="main" src="infomation.html" scrolling="no">
+<iframe class="main" src="infomation.html" scrolling="no" name="contents">
 </iframe>
 <footer>
 	(C)2018 oliver.app.pg
