--- a/kintai.html
+++ b/kintai.html
@@ -12,29 +12,180 @@
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="login.css">
 <link rel="stylesheet" href="kintai.css">
+<script type="text/javascript">
+  //要素内のクリックされた位置を取得するグローバル（のような）変数
+  var x;
+  var y;
+
+  function onLoad() {
+    var today = new Date();
+    var currentYear = today.getFullYear();
+    var currentMonth = today.getMonth() + 1;
+    var data = get_month_calendar(currentYear, currentMonth);
+
+    console.log(today);
+    console.log(data);
+    writeCalendar(data, currentYear, currentMonth);
+
+    writeDayreport(2018, 1, 1);
+
+    var elements = document.getElementsByClassName("day");
+
+
+    //マウスが要素内で押されたとき、又はタッチされたとき発火
+    for(var i = 0; i < elements.length; i++) {
+        elements[i].addEventListener("mousedown", mdown, false);
+        elements[i].addEventListener("touchstart", mdown, false);
+    }
+  }
+  function writeCalendar(calendar, year, month) {
+    var monthTag = document.getElementById('month');
+    var dayTag = document.getElementById('day');
+
+    var monthHTML;
+
+    monthHTML = "<div class=\"month\">";
+    monthHTML += "<i class=\"fas fa-angle-double-left\"></i><input type=\"button\" class=\"prevMonth\" value=\"前の月\">";
+    monthHTML += "<span class=\"month\">" + month + "</span>";
+    monthHTML += "<input type=\"button\" class=\"nextMonth\" value=\"次の月\"><i class=\"fas fa-angle-double-right\"></i>";
+    monthHTML += "</div>";
+
+    monthTag.innerHTML = monthHTML;
+
+    var dayHTML;
+    var dow = ["月", "火", "水", "木", "金", "土", "日"];
+    dayHTML = "";
+    dayHTML += "<div class=\"day\">";
+    for (var i = 0; i < calendar.length; i++) {
+      dayHTML += "<span class=\"day" + calendar[i]['weekday'] + "\">";
+      dayHTML += calendar[i]['day'];
+      dayHTML += " " + dow[calendar[i]['weekday']];
+      dayHTML += "</span>";
+    }
+    dayHTML += "</div>";
+
+    dayTag.innerHTML = dayHTML;
+  }
+  function get_month_calendar(year, month) {
+    var firstDate = new Date(year, (month - 1), 1); // 指定した年月の初日の情報
+    var lastDay = new Date(year, (firstDate.getMonth() + 1), 0).getDate(); // 指定した年月の末日
+    var weekday = firstDate.getDay(); // 指定した年月の初日の曜日
+
+    var calendarData = []; // カレンダーの情報を格納
+    var weekdayCount = weekday; // 曜日のカウント用
+    for (var i = 0; i < lastDay; i++) {
+        calendarData[i] = {
+            day: i + 1,
+            weekday: weekdayCount
+        }
+        // 曜日のカウントが6(土曜日)まできたら0(日曜日)に戻す
+        if(weekdayCount >= 6) {
+            weekdayCount = 0;
+        } else {
+            weekdayCount++;
+        }
+    }
+    return calendarData;
+  }
+
+  function writeDayreport(year, month, day)
+  {
+    var reportTag = document.getElementById('report');
+    var reportHTML;
+
+    reportHTML = "";
+    for(var i = 9; i < 26; i++)
+    {
+      reportHTML += "<div class=\"dayreportContents at" + i +"\">";
+      reportHTML += "<div class=\"time\"><span class=\"time\">" + i + "</span>時</div>";
+      reportHTML += "</div>";
+    }
+    reportTag.innerHTML = reportHTML;
+  }
+
+  function mdown(e) {
+      //クラス名に .drag を追加
+      this.classList.add("drag");
+
+      //タッチデイベントとマウスのイベントの差異を吸収
+      if(e.type === "mousedown") {
+          var event = e;
+      } else {
+          var event = e.changedTouches[0];
+      }
+
+      //要素内の相対座標を取得
+      x = event.pageX - this.offsetLeft;
+      y = event.pageY - this.offsetTop;
+
+      //ムーブイベントにコールバック
+      document.body.addEventListener("mousemove", mmove, false);
+      document.body.addEventListener("touchmove", mmove, false);
+  }
+
+  //マウスカーソルが動いたときに発火
+  function mmove(e) {
+
+      //ドラッグしている要素を取得
+      var drag = document.getElementsByClassName("drag")[0];
+      var body = document.getElementById("main");
+
+      //同様にマウスとタッチの差異を吸収
+      if(e.type === "mousemove") {
+          var event = e;
+      } else {
+          var event = e.changedTouches[0];
+      }
+
+      //フリックしたときに画面を動かさないようにデフォルト動作を抑制
+      e.preventDefault();
+
+      //マウスが動いた場所に要素を動かす
+      //drag.style.top = event.pageY - y + "px";
+      var dx = event.pageX - x;
+      var maxdx = drag.clientWidth - body.clientWidth;
+      if(dx > 0){ dx = 0; }
+      if(dx < -maxdx){ dx = -maxdx; }
+      drag.style.left = dx + "px";
+
+      //マウスボタンが離されたとき、またはカーソルが外れたとき発火
+      drag.addEventListener("mouseup", mup, false);
+      document.body.addEventListener("mouseleave", mup, false);
+      drag.addEventListener("touchend", mup, false);
+      document.body.addEventListener("touchleave", mup, false);
+
+  }
+
+  //マウスボタンが上がったら発火
+  function mup(e) {
+      var drag = document.getElementsByClassName("drag")[0];
+
+      //ムーブベントハンドラの消去
+      document.body.removeEventListener("mousemove", mmove, false);
+      drag.removeEventListener("mouseup", mup, false);
+      document.body.removeEventListener("touchmove", mmove, false);
+      drag.removeEventListener("touchend", mup, false);
+
+      //クラス名 .drag も消す
+      drag.classList.remove("drag");
+  }
+</script>
 </head>
-<body>
+<body id="main" onload="onLoad();">
   <div class="contens">
 		勤怠<br>
+    <form method="get" action="updata_kintai.php" id="update_kintai">
+      <input type="submit" value="更新">
+    </form>
     <div class="kintai_main">
-      <div class="addfield">
-        <input type="number" class="time" required>
-        <select class="code">
-        <option value="0">選択</option>
-        <option value="1">WB</option>
-        <option value="-1">その他</option>
-        </select>
-        <input type="text" class="other" placeholder="備考">
+      <div class="calendar_month" id="month">
       </div>
-      <input type="button" class="add" value="追加">
-      <!-- javascriptで -->
-      <script>
-        var array = [];
-
-      </script>
-      <form method="get" action="updata_kintai.php" id="update_kintai">
-        <input type="submit" value="更新">
-      </form>
+      <div class="calendar_day" id="day">
+      </div>
+      <div class="dayreport_frame">
+        <div class="dayreport" id="report">
+        </div>
+      </div>
     </div>
   </div>
 </body>
